fix hidden theme select form overflow cutting off bottom border

--- a/persephone/views/static/links/secretgraphics/scripts.css
+++ b/persephone/views/static/links/secretgraphics/scripts.css
@@ -79,6 +79,7 @@
 .scripts_enabled #theme_select_form {
 	display: block;
 	margin-bottom: 1rem;
+	overflow: unset;
 }
 .scripts_enabled [for="theme_select"] {
 	border-bottom-left-radius: 0.5rem;
